[package]
name = "turbomcp-macros"
version = "2.3.3"
edition = "2024"
description = "Procedural macros for ergonomic MCP tool and resource registration"
license = "MIT"
authors = ["Nicholas Paterno <nick@epistates.com>"]
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "macros", "procedural", "derive", "codegen"]
categories = ["development-tools"]
readme = "README.md"
rust-version = "1.89.0"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing", "visit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# JSON Schema generation (always required - macros always generate schemas)
schemars = { version = "1.0" }

# CRITICAL FIX: Add dependencies for macro-generated code
# These are required because the #[server] macro generates code that uses these crates
axum = { version = "0.8.4", optional = true, features = ["ws", "tracing", "macros"] }
tokio = { workspace = true, optional = true }

turbomcp-protocol = { version = "2.3.3", path = "../turbomcp-protocol" }
turbomcp-transport = { version = "2.3.3", path = "../turbomcp-transport", optional = true }

[dev-dependencies]
async-trait = "0.1"
trybuild = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[features]
default = []
# CRITICAL FIX: Feature flags for macro-generated code
http = ["axum"]
tcp = ["tokio", "dep:turbomcp-transport"]
unix = ["tokio", "dep:turbomcp-transport"]

# MCP draft specification features (pass-through to turbomcp-protocol)
mcp-draft = ["turbomcp-protocol/mcp-draft"]
mcp-icons = ["turbomcp-protocol/mcp-icons"]
mcp-tasks = ["turbomcp-protocol/mcp-tasks"]
mcp-url-elicitation = ["turbomcp-protocol/mcp-url-elicitation"]
mcp-sampling-tools = ["turbomcp-protocol/mcp-sampling-tools"]

# Note: schemars is always required and not a feature - it's used by all macros
