[package]
name = "turbomcp-proxy"

version = "2.3.6"

edition = "2024"
authors = ["TurboMCP Team"]
description = "Universal MCP adapter/generator - introspection, proxying, and code generation for any MCP server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/turbomcp/turbomcp"
keywords = ["mcp", "proxy", "adapter", "code-generation", "introspection"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
rust-version = "1.89.0"

[lints]
workspace = true

[dependencies]
# TurboMCP (consumer-only - we only depend ON these, nothing depends on us)

turbomcp-protocol = { path = "../turbomcp-protocol", version = "2.3.5" }
turbomcp-transport = { path = "../turbomcp-transport", version = "2.3.5", features = ["http", "tcp", "unix", "websocket"] }
turbomcp-client = { path = "../turbomcp-client", version = "2.3.5" }
turbomcp-server = { path = "../turbomcp-server", version = "2.3.5", optional = true }
turbomcp-auth = { path = "../turbomcp-auth", version = "2.3.5", optional = true }

# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# CLI (optional)
clap = { version = "4.5", features = ["derive", "cargo", "env"], optional = true }
colored = { version = "2.0", optional = true }
# Removed atty (unmaintained) - use std::io::IsTerminal instead (Rust 1.70+)
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# HTTP/Web (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }

# WebSocket (optional)
tokio-tungstenite = { version = "0.28", optional = true, features = ["rustls-tls-native-roots"] }

# REST API & OpenAPI (optional)
utoipa = { version = "5.4", features = ["axum_extras", "macros"], optional = true }
utoipa-swagger-ui = { version = "7.0", features = ["axum"], optional = true }

# GraphQL (optional) - note: graphql support scaffolded for Phase 6
# Requires: async-graphql and async-graphql-axum from latest releases
# Currently using placeholder versions - will update when integrating async-graphql 7.0+

# Code generation (optional)
handlebars = { version = "6.0", optional = true }
convert_case = { version = "0.6", optional = true }
chrono = { version = "0.4", optional = true }
syn = { version = "2", features = ["parsing", "full"], optional = true }
proc-macro2 = { version = "1", optional = true }

# Schema generation (optional)
schemars = { version = "1.0", optional = true }

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
thiserror = "2.0"
url = "2.5"
ipnetwork = "0.20"

# Security
secrecy = "0.10"
jsonwebtoken = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.0"
pretty_assertions = "1.4"
criterion = { workspace = true, features = ["async_tokio"] }

[features]
default = ["cli", "runtime", "introspection"]

# Core features
introspection = []
runtime = ["axum", "tower", "tower-http", "reqwest", "tokio-tungstenite", "auth"]
codegen = ["handlebars", "convert_case", "chrono", "syn", "proc-macro2"]
schema = ["schemars"]
auth = ["dep:turbomcp-auth", "dep:jsonwebtoken", "turbomcp-transport/auth", "turbomcp-transport/jwt-validation"]

# Adapters (Phase 6)
rest = ["utoipa", "utoipa-swagger-ui", "axum", "tower", "tower-http"]
graphql = ["axum", "tower", "tower-http"]  # async-graphql dependencies optional for now
adapters = ["rest", "graphql"]

# MCP draft specification features (pass-through to turbomcp-protocol)
mcp-draft = ["turbomcp-protocol/mcp-draft"]
mcp-icons = ["turbomcp-protocol/mcp-icons"]
mcp-tasks = ["turbomcp-protocol/mcp-tasks"]
mcp-url-elicitation = ["turbomcp-protocol/mcp-url-elicitation"]
mcp-sampling-tools = ["turbomcp-protocol/mcp-sampling-tools"]

# CLI
cli = ["clap", "colored", "tracing-subscriber"]

# Full feature set
full = ["introspection", "runtime", "codegen", "schema", "cli", "auth", "adapters"]

[[bin]]
name = "turbomcp-proxy"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "introspection"
harness = false

[[bench]]
name = "runtime_proxy"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
