[package]
name = "turbomcp-server"
version = "2.1.0"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Fast MCP server implementation with middleware, routing, and lifecycle management"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "server", "middleware", "routing", "lifecycle"]
categories = ["development-tools", "web-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
turbomcp-protocol = { version = "2.1.0", path = "../turbomcp-protocol" }
turbomcp-transport = { version = "2.1.0", path = "../turbomcp-transport", optional = true }
turbomcp-macros = { version = "2.1.0", path = "../turbomcp-macros" }
turbomcp-auth = { version = "2.1.0", path = "../turbomcp-auth", optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = "6.1.0"
parking_lot = "0.12"
futures = "0.3"
anyhow = "1.0"
bytes = { workspace = true }
regex = "1.12"
jsonschema = { version = "0.33", default-features = false, features = ["resolve-file"] }
config = { version = "0.15", default-features = true }

# Middleware dependencies (optional - only needed for HTTP/advanced features)
tower = { workspace = true }  # Core abstraction layer (uses workspace 0.5.2)
tower-http = { workspace = true, optional = true }
tower_governor = { version = "0.7", optional = true }
jsonwebtoken = { version = "10.1", features = ["aws_lc_rs"], optional = true }
secrecy = { version = "0.8", features = ["serde"], optional = true }
http = { version = "1.0" }  # Core HTTP types for Service abstraction (lightweight)
axum = { version = "0.8.4", optional = true, features = ["ws", "json"] }
async-stream = { version = "0.3", optional = true }

# Observability dependencies
once_cell = "1.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.5"

[[bench]]
name = "middleware_benchmarks"
harness = false

[features]
default = ["stdio"]
# Core capabilities (minimal by default)
auth = ["dep:turbomcp-auth", "dep:jsonwebtoken", "dep:secrecy"]
dpop = ["auth", "turbomcp-auth/dpop"]
health-checks = []
hot-reload = []
metrics = []
middleware = ["dep:tower-http"]  # tower and http are now core deps
rate-limiting = ["middleware", "dep:tower_governor"]
graceful-shutdown = []
observability = []
# Transport features (progressive enhancement)
stdio = ["dep:turbomcp-transport", "turbomcp-transport/stdio"]
http = ["dep:turbomcp-transport", "turbomcp-transport/http", "middleware", "dep:axum", "dep:async-stream"]
websocket = ["dep:turbomcp-transport", "turbomcp-transport/websocket", "http"]
tcp = ["dep:turbomcp-transport", "turbomcp-transport/tcp"]
unix = ["dep:turbomcp-transport", "turbomcp-transport/unix"]
# Convenience feature bundles
all-transports = ["stdio", "http", "websocket", "tcp", "unix"]
full = ["all-transports", "auth", "dpop", "health-checks", "metrics", "middleware", "rate-limiting", "graceful-shutdown"]