[package]
name = "turbomcp-server"

version = "2.3.0"

version = "2.3.0"

edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Fast MCP server implementation with middleware, routing, and lifecycle management"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "server", "middleware", "routing", "lifecycle"]
categories = ["development-tools", "web-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]

turbomcp-protocol = { version = "2.3.0", path = "../turbomcp-protocol" }
turbomcp-transport = { version = "2.3.0", path = "../turbomcp-transport", optional = true }
turbomcp-macros = { version = "2.3.0", path = "../turbomcp-macros" }
turbomcp-auth = { version = "2.3.0", path = "../turbomcp-auth", optional = true }

turbomcp-protocol = { version = "2.3.0", path = "../turbomcp-protocol", default-features = false }
turbomcp-transport = { version = "2.3.0", path = "../turbomcp-transport", optional = true }
turbomcp-macros = { version = "2.3.0", path = "../turbomcp-macros" }
turbomcp-auth = { version = "2.3.0", path = "../turbomcp-auth", optional = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = "6.1.0"
parking_lot = "0.12"
futures = "0.3"
anyhow = "1.0"
bytes = { workspace = true }
regex = "1.12"
jsonschema = { version = "0.33", default-features = false, features = ["resolve-file"] }
config = { version = "0.15", default-features = true }

# Middleware dependencies (optional - only needed for HTTP/advanced features)
tower = { workspace = true }  # Core abstraction layer (uses workspace 0.5.2)
tower-http = { workspace = true, optional = true }
governor = { version = "0.10.1", optional = true }  # Sprint 3.2: GCRA rate limiting
tower_governor = { version = "0.8.0", optional = true }  # Sprint 3.2: Tower integration
tower-sessions = { version = "0.13", optional = true }  # Sprint 2: Session management
jsonwebtoken = { workspace = true, optional = true }
secrecy = { version = "0.8", features = ["serde"], optional = true }
http = { version = "1.0" }  # Core HTTP types for Service abstraction (lightweight)
axum = { version = "0.8.4", optional = true, features = ["ws", "json"] }
async-stream = { version = "0.3", optional = true }

# Security (Sprint 2)
syn = { version = "2", features = ["parsing", "full"], optional = true }  # Handler name validation

# Input Validation (Sprint 3.4)
garde = { version = "0.22", optional = true, features = ["email", "url", "credit-card", "phone-number"] }
axum-valid = { version = "0.24", optional = true, features = ["garde"], default-features = false }

# Observability dependencies
once_cell = "1.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.5"

[features]
default = ["stdio"]
# Core capabilities (minimal by default)
auth = ["dep:turbomcp-auth", "dep:jsonwebtoken", "dep:secrecy"]
dpop = ["auth", "turbomcp-auth/dpop"]
sessions = ["middleware", "dep:tower-sessions"]  # Sprint 2: Session management
security = ["dep:syn"]  # Sprint 2: Handler name validation
input-validation = ["http", "dep:garde", "dep:axum-valid"]  # Sprint 3.4: Input validation
multi-tenancy = ["middleware"]  # Multi-tenant SaaS support with tenant extraction
health-checks = []
hot-reload = []
metrics = []
middleware = ["dep:tower-http"]  # tower and http are now core deps
rate-limiting = ["middleware", "dep:governor", "dep:tower_governor"]
graceful-shutdown = []  # DEPRECATED: Graceful shutdown is now always enabled as core functionality
observability = []
# Transport features (progressive enhancement)
stdio = ["dep:turbomcp-transport", "turbomcp-transport/stdio"]
http = ["dep:turbomcp-transport", "turbomcp-transport/http", "middleware", "dep:axum", "dep:async-stream"]
websocket = ["dep:turbomcp-transport", "turbomcp-transport/websocket", "http"]
tcp = ["dep:turbomcp-transport", "turbomcp-transport/tcp"]
unix = ["dep:turbomcp-transport", "turbomcp-transport/unix"]
# MCP specification features
mcp-tasks = ["turbomcp-protocol/mcp-tasks"]  # Tasks API (MCP 2025-11-25 draft, SEP-1686)
# Convenience feature bundles
all-transports = ["stdio", "http", "websocket", "tcp", "unix"]

full = ["all-transports", "auth", "dpop", "sessions", "security", "input-validation", "multi-tenancy", "health-checks", "metrics", "middleware", "rate-limiting"]

full = ["all-transports", "auth", "dpop", "sessions", "security", "input-validation", "multi-tenancy", "health-checks", "metrics", "middleware", "rate-limiting", "mcp-tasks"]

