[package]
name = "turbomcp-server"
version = "3.0.0-beta.4"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Production-ready MCP server with zero-boilerplate macros and transport-agnostic design"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "server", "protocol", "llm", "ai"]
categories = ["development-tools", "web-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
# Core v3 dependencies
turbomcp-core = { version = "3.0.0-beta.4", path = "../turbomcp-core" }
turbomcp-types = { version = "3.0.0-beta.4", path = "../turbomcp-types" }
turbomcp-protocol = { version = "3.0.0-beta.4", path = "../turbomcp-protocol" }
turbomcp-transport = { version = "3.0.0-beta.4", path = "../turbomcp-transport", optional = true }
turbomcp-macros = { version = "3.0.0-beta.4", path = "../turbomcp-macros" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
dashmap = "6.1"

# HTTP dependencies (optional - for http/websocket features)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
http = { version = "1.0", optional = true }
async-stream = { version = "0.3", optional = true }

# Schema generation
schemars = { version = "1.0", features = ["chrono04", "uuid1"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
proptest = "1.5"

[features]
default = ["stdio"]

# Transport features (progressive enhancement)
stdio = ["dep:turbomcp-transport", "turbomcp-transport/stdio"]
http = [
    "dep:turbomcp-transport",
    "turbomcp-transport/http",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
    "dep:async-stream",
]
websocket = ["dep:turbomcp-transport", "turbomcp-transport/websocket", "http"]
tcp = ["dep:turbomcp-transport", "turbomcp-transport/tcp"]
unix = ["dep:turbomcp-transport", "turbomcp-transport/unix"]

# Feature bundles
all-transports = ["stdio", "http", "websocket", "tcp", "unix"]
full = ["all-transports"]
