[package]
name = "turbomcp-tcp"
version = "3.0.0-beta.4"
edition = "2024"
rust-version = "1.89.0"
authors = ["Nicholas Paterno <nick@epistates.com>"]
license = "MIT"
description = "TCP transport implementation for TurboMCP SDK"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-tcp"
keywords = ["mcp", "tcp", "transport", "networking"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
# Core dependencies
turbomcp-transport-traits = { version = "3.0.0-beta.4", path = "../turbomcp-transport-traits" }
turbomcp-protocol = { version = "3.0.0-beta.4", path = "../turbomcp-protocol" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# Data structures
bytes = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.16", features = ["v4"] }
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
