[package]
name = "turbomcp-telemetry"
version = "3.0.0-beta.1"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "OpenTelemetry integration and observability for TurboMCP SDK"
repository = "https://github.com/Epistates/turbomcp"
documentation = "https://docs.rs/turbomcp-telemetry"
homepage = "https://turbomcp.org"
keywords = ["mcp", "opentelemetry", "telemetry", "tracing", "metrics"]
categories = ["development-tools::debugging", "development-tools::profiling", "asynchronous"]
readme = "README.md"

[dependencies]
# Core dependencies
turbomcp-protocol = { version = "3.0.0-beta.1", path = "../turbomcp-protocol" }

# Tracing foundation (always required)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# OpenTelemetry core (optional)
opentelemetry = { version = "0.31", default-features = false, optional = true, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, optional = true, features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, optional = true, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client"] }
tracing-opentelemetry = { version = "0.32", optional = true }

# Prometheus metrics (alternative to OTLP)
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true, default-features = false, features = ["http-listener"] }

# Tower integration
tower = { workspace = true, optional = true }
tower-service = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# HTTP types
http = "1.0"

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = { workspace = true }
once_cell = "1.19"

[dev-dependencies]
tokio = { workspace = true }
tokio-test = "0.4"
proptest = "1.5"

[features]
default = ["tracing-json"]

# Tracing output formats
tracing-json = []
tracing-pretty = []

# OpenTelemetry integration (full OTLP export)
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry"
]

# Prometheus metrics (standalone, without OpenTelemetry)
prometheus = ["dep:metrics", "dep:metrics-exporter-prometheus"]

# Tower middleware integration
tower = ["dep:tower", "dep:tower-service", "dep:futures-util", "dep:pin-project-lite"]

# Full telemetry stack
full = ["opentelemetry", "prometheus", "tower"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
