[package]
name = "turbomcp-transport"
version = "2.3.7"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Multi-protocol transport layer supporting HTTP, WebSocket, STDIO, and TCP for MCP communications"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "transport", "http", "websocket", "networking"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
# Core dependencies
turbomcp-protocol = { workspace = true }
turbomcp-transport-traits = { workspace = true }
# v3.0: Individual transport crates (re-exported for backward compatibility)
turbomcp-stdio = { workspace = true, optional = true }
turbomcp-http = { workspace = true, optional = true }
turbomcp-websocket = { workspace = true, optional = true }
turbomcp-tcp = { workspace = true, optional = true }
turbomcp-unix = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net", "io-std", "io-util", "process", "sync", "time", "fs"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
futures = { workspace = true }
futures-util = { version = "0.3", optional = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP/WebSocket (optional)
axum = { version = "0.8.4", optional = true, features = ["ws", "json"] }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
hyper = { version = "1.0", optional = true }
hyper-util = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.28.0", optional = true, features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "stream", "rustls-tls"] }
async-stream = { version = "0.3", optional = true }

# Compression (optional)
flate2 = { version = "1.0", optional = true }
brotli = { version = "8.0.2", optional = true }
lz4_flex = { version = "0.11", optional = true }

# TLS support (optional)
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }

# Observability
tracing = { workspace = true }
metrics = { workspace = true, optional = true }

# Authentication (optional)
turbomcp-auth = { version = "2.3.7", path = "../turbomcp-auth", optional = true }
jsonwebtoken = { version = "10.2", optional = true, features = ["aws_lc_rs", "use_pem"] }
base64 = { version = "0.22", optional = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = "2.5"
ahash = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
fastrand = "2.0"
once_cell = "1.19"
rand = { workspace = true }

# Development utilities
wiremock = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = "3.0"
tempfile = { workspace = true }
[features]
default = ["stdio"]

# Core transports
# v3.0: stdio transport is now provided by turbomcp-stdio crate
stdio = ["dep:turbomcp-stdio"]
# v3.0: HTTP client provided by turbomcp-http crate; server-side config remains here
http = ["dep:turbomcp-http", "axum", "tower", "tower-http", "hyper", "hyper-util", "async-stream"]
# v3.0: WebSocket transport provided by turbomcp-websocket crate; axum integration remains here
websocket = ["dep:turbomcp-websocket", "tokio-tungstenite", "http", "futures-util"]
# v3.0: TCP transport provided by turbomcp-tcp crate
tcp = ["dep:turbomcp-tcp", "tokio/net"]
# v3.0: Unix socket transport provided by turbomcp-unix crate
unix = ["dep:turbomcp-unix", "tokio/net"]

# gRPC support (future)
grpc = ["http"]

# QUIC support (future) 
quic = []

# Compression support
compression = ["flate2", "brotli", "lz4_flex"]

# TLS support
tls = ["rustls", "tokio-rustls"]

# Authentication
auth = ["dep:turbomcp-auth", "http"]
jwt-validation = ["jsonwebtoken", "base64", "http", "reqwest"]

# Observability
metrics = ["dep:metrics"]

# MCP draft specification features (pass-through to turbomcp-protocol)
mcp-draft = ["turbomcp-protocol/mcp-draft"]
mcp-icons = ["turbomcp-protocol/mcp-icons"]
mcp-tasks = ["turbomcp-protocol/mcp-tasks"]
mcp-url-elicitation = ["turbomcp-protocol/mcp-url-elicitation"]
mcp-sampling-tools = ["turbomcp-protocol/mcp-sampling-tools"]

# Development features
test-utils = ["dep:wiremock"]
